add outline file readme

--- a/movie_review_sentiment_analysis.ipynb
+++ b/movie_review_sentiment_analysis.ipynb
@@ -3,40 +3,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "67id-coUdzyX"
-      },
-      "source": [
-        "# MOVIE REVIEW SENTIMENT ANALYSIS USING NLP and K-NN Algorithm"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gM6UFgNZdzyZ"
-      },
-      "source": [
-        "## **Background**\n",
-        "Dalam industri perfilman, ulasan penonton menjadi faktor penting yang mempengaruhi kesuksesan sebuah film. Ulasan ini tidak hanya memberikan pandangan tentang kualitas film tetapi juga membantu menarik lebih banyak penonton melalui rekomendasi dari mulut ke mulut dan platform ulasan online. Dataset \"Movie Reviews\" yang terdiri dari 32.937 ulasan positif dan 31.783 ulasan negatif menawarkan wawasan berharga tentang sentimen penonton terhadap berbagai film. Dataset ini mencakup beberapa kolom seperti `fold_id`, `cv_tag`, `html_id`, `sent_id`, `text`, dan `tag`, dengan `tag` sebagai target yang berisi label positif dan negatif. Analisis sentimen pada ulasan ini bisa memberikan wawasan mendalam mengenai persepsi publik terhadap film, yang sangat berguna bagi studio, distributor, dan pemasar dalam industri film.\n",
-        "\n",
-        "## **Masalah Bisnis**\n",
-        "Studio film dan perusahaan distribusi menghadapi tantangan besar dalam memahami dan mengelola ulasan film dari berbagai platform online. Mengingat volume besar ulasan yang dihasilkan setiap hari, sulit bagi perusahaan untuk secara manual mengidentifikasi tren sentimen yang penting. Kurangnya pemahaman yang cepat dan akurat tentang sentimen penonton dapat menyebabkan keputusan yang tidak optimal, baik dalam hal pemasaran, distribusi, maupun produksi film di masa depan. Selain itu, kesalahan dalam menilai sentimen penonton bisa mengakibatkan strategi pemasaran yang tidak tepat, yang dapat berdampak negatif pada performa box office dan reputasi film.\n",
-        "\n",
-        "## **Goal**\n",
-        "Tujuan dari penggunaan dataset \"Movie Reviews\" adalah untuk mengembangkan model analisis sentimen yang mampu secara otomatis mengklasifikasikan ulasan film sebagai positif atau negatif. Dengan model ini, perusahaan dapat:\n",
-        "1. **Meningkatkan Pemahaman Sentimen Penonton:** Mendapatkan wawasan mendalam tentang bagaimana penonton merespons film tertentu, yang dapat digunakan untuk mengukur keberhasilan film dan menentukan strategi pemasaran yang lebih efektif.\n",
-        "2. **Mengidentifikasi Tren dan Pola Sentimen:** Menganalisis pola sentimen terhadap berbagai genre atau film dari waktu ke waktu untuk mendukung keputusan bisnis terkait produksi dan distribusi film.\n",
-        "3. **Mengoptimalkan Strategi Pemasaran:** Menggunakan hasil analisis sentimen untuk menyesuaikan kampanye pemasaran, dengan fokus pada elemen yang disukai atau mengatasi kritik yang umum dari penonton.\n",
-        "\n",
-        "Dengan mencapai tujuan ini, perusahaan dapat meningkatkan efisiensi operasional dan pengambilan keputusan, serta memaksimalkan dampak positif ulasan film terhadap kesuksesan komersial film tersebut."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "2Mpvyl76dzya"
       },
       "source": [
-        "# Movie Review Sentiment Analysis Dataset: Project Pipeline\n",
+        "# Movie Review Sentiment Analysis Dataset: movie review\n",
         "\n",
         "The various steps involved in the Machine Learning Pipeline are:\n",
         "\n",
@@ -68,19 +38,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JTTJ87xVdzyb"
-      },
-      "source": [
-        "## Step-1: Import the Necessary Dependencies"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "9c9eoTtpdzyc"
       },
       "source": [
-        "## Step-2: Read and Load the Dataset"
+        "## Step-1: Read and Load the Dataset"
       ]
     },
     {
@@ -525,7 +486,7 @@
         "id": "Vbakmez7dzye"
       },
       "source": [
-        "## Step-3: Exploratory Data Analysis"
+        "## Step-2: Exploratory Data Analysis"
       ]
     },
     {
@@ -534,7 +495,7 @@
         "id": "A8yDbL7Odzyf"
       },
       "source": [
-        "3.1: Five top records of data"
+        "2.1: Five top records of data"
       ]
     },
     {
@@ -667,7 +628,7 @@
         "id": "vg4FKmbwdzyf"
       },
       "source": [
-        "3.2: Columns/features in data"
+        "2.2: Columns/features in data"
       ]
     },
     {
@@ -710,7 +671,7 @@
         "id": "cU7CsE2fdzyf"
       },
       "source": [
-        "3.3: Length of the dataset"
+        "2.3: Length of the dataset"
       ]
     },
     {
@@ -750,7 +711,7 @@
         "id": "LWH_y9lOdzyg"
       },
       "source": [
-        "3.4: Shape of data"
+        "2.4: Shape of data"
       ]
     },
     {
@@ -793,7 +754,7 @@
         "id": "hi3b4zNzdzyg"
       },
       "source": [
-        "3.5: Data information"
+        "2.5: Data information"
       ]
     },
     {
@@ -845,7 +806,7 @@
         "id": "DxvYLvDOdzyg"
       },
       "source": [
-        "3.6: Datatypes of all columns"
+        "2.6: Datatypes of all columns"
       ]
     },
     {
@@ -895,7 +856,7 @@
         "id": "czHuGdVXdzyh"
       },
       "source": [
-        "3.7: Checking for null values"
+        "2.7: Checking for null values"
       ]
     },
     {
@@ -939,7 +900,7 @@
         "id": "eRrYe7r3dzyh"
       },
       "source": [
-        "3.8: Rows and columns in the dataset"
+        "2.8: Rows and columns in the dataset"
       ]
     },
     {
@@ -981,7 +942,7 @@
         "id": "hGY1a79vdzyh"
       },
       "source": [
-        "3.9: Check unique target values"
+        "2.9: Check unique target values"
       ]
     },
     {
@@ -1024,7 +985,7 @@
         "id": "2hmTAqTJdzyh"
       },
       "source": [
-        "3.10: Check the number of target values"
+        "2.10: Check the number of target values"
       ]
     },
     {
