--- a/movie_review_sentiment_analysis.ipynb
+++ b/movie_review_sentiment_analysis.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2024-08-14T15:10:38.335297Z",
@@ -58,22 +58,7 @@
         "id": "kU7l2T_Udzyd",
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_12560\\1933837562.py:1: DeprecationWarning: \n",
-            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-            "but was not found to be installed on your system.\n",
-            "If this would cause problems for you,\n",
-            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-            "        \n",
-            "  import pandas as pd\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "path = \"D:\\\\1.Data Science\\\\project\\\\movie_review\\\\movie_review.csv\"\n",
@@ -82,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -249,7 +234,7 @@
               "[64720 rows x 6 columns]"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -260,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -289,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -471,7 +456,7 @@
               "[64720 rows x 6 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -500,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -613,7 +598,7 @@
               "4  in other words , don't dismiss this film becau...  pos  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -633,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -656,7 +641,7 @@
               "Index(['fold_id', 'cv_tag', 'html_id', 'sent_id', 'text', 'tag'], dtype='object')"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -676,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -716,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -739,7 +724,7 @@
               "(64720, 6)"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -759,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -811,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -841,7 +826,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -861,7 +846,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -884,7 +869,7 @@
               "0"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -905,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -947,7 +932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -970,7 +955,7 @@
               "array(['pos', 'neg'], dtype=object)"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -990,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1013,7 +998,7 @@
               "2"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1033,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1090,7 +1075,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1304,7 +1289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1328,7 +1313,7 @@
               "<Axes: xlabel='target', ylabel='count'>"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1359,7 +1344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1472,7 +1457,7 @@
               "[64720 rows x 2 columns]"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1484,7 +1469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1516,7 +1501,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_12560\\4252185749.py:45: SettingWithCopyWarning: \n",
+            "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_21312\\4252185749.py:45: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -1605,7 +1590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1662,7 +1647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 40,
       "metadata": {
         "id": "q84FZkdh8rWx"
       },
@@ -1678,6 +1663,108 @@
         "\n",
         "# Pembagian data menjadi data latih dan data uji\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(51776, 5000)"
+            ]
+          },
+          "execution_count": 42,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "X_train.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(12944, 5000)"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "X_test.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "58154    0\n",
+              "33401    0\n",
+              "44182    0\n",
+              "46480    0\n",
+              "41584    0\n",
+              "        ..\n",
+              "4456     1\n",
+              "27023    1\n",
+              "17103    1\n",
+              "63177    0\n",
+              "49820    0\n",
+              "Name: target, Length: 12944, dtype: int64"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "y_test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "48063    0\n",
+              "7748     1\n",
+              "39824    0\n",
+              "49957    0\n",
+              "33990    0\n",
+              "        ..\n",
+              "62570    0\n",
+              "38158    0\n",
+              "860      1\n",
+              "15795    1\n",
+              "56422    0\n",
+              "Name: target, Length: 51776, dtype: int64"
+            ]
+          },
+          "execution_count": 46,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "y_train"
       ]
     },
     {
